# marching-cubes

./: .gitignore  Cargo.toml  LICENSE  README.md  visualize.py
examples/: benchmark.rs  buffer.rs  compiled.rs  evaluated.rs  expr.txt  fidget.rs
marchy/: Cargo.toml  pyproject.toml
marchy/.env/: pyvenv.cfg
marchy/src/: lib.rs
src/: cli.rs  lib.rs  main.rs  sdf.rs
