[package]
name = "marchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "marchy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
marching-cubes = { path = "/Users/tristanantonsen/Desktop/Code/marching-cubes" }
